# Hellenistic_Astrology

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.claude/skills/hellenistic-astrology/: SKILL.md
.claude/skills/hellenistic-astrology-phase3/: SKILL.md
docs/: HOWTO.md  codebase_reference_review.html  table_termes_egyptiens.md
scripts/: assemble_document.py  check_bibliography.py  fetch_ephemeris.py  generate_brief.py  generate_docx.py  render_wheel_debug.py
src/hellenistic_astrology/: __init__.py  assembly.py  bibliography.py  cli.py  mcp_server.py
src/hellenistic_astrology/core/: __init__.py  aspects.py  chart.py  condition.py  dignities.py  eclipse.py  ephemeris.py  geocoding.py  houses.py  lots.py  lunation.py  observation.py  phasis.py  sect.py  timezone.py  zodiacal_releasing.py
src/hellenistic_astrology/docgen/: CLAUDE.md  __init__.py  builder.py  chart_image.py  styles.py
src/hellenistic_astrology/interpretation/: CLAUDE.md  __init__.py  brief.py
tests/: regression_helpers.py  test_aspects.py  test_assembly.py  test_bibliography.py  test_chart_image.py  test_cli.py  test_condition.py  test_dignities.py  test_docgen.py  test_eclipse.py  test_ephemeris.py  test_geocoding.py  test_houses.py  test_interpretation_brief.py  test_lunation.py  test_mcp_server.py  test_phasis.py  test_regression_anthony.py  test_regression_liam.py  test_sect.py  test_timezone.py  test_zodiacal_releasing.py
