[project]
name = "hellenistic-astrology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "pyswisseph>=2.10",
    "python-docx>=1.2.0",
    "mcp>=1.7",
    "matplotlib>=3.9",
]

[project.scripts]
hellenistic-astrology = "hellenistic_astrology.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hellenistic_astrology"]
